# finite-embeddings

./: LICENSE  README.md  pyproject.toml
finite_embeddings/: __init__.py  cli.py  client.py  server.py
meow_embed/: __init__.py  cache.py  cli.py  client.py  parsing.py  server.py  types.py
scripts/: bench_cache_function.py  bench_lmdb_cache.py  typing_narrowing.py
tests/: readme_example_cache.py  readme_example_client.py  readme_example_client_lmdb.py  test_client_embed_typing.py  test_client_live_server.py
